--- a/apps/timeseries/src/app/pages/login/login.component.html
+++ b/apps/timeseries/src/app/pages/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="w-full p-4">
+  <div class="bg-white py-8 px-6 shadow rounded-lg sm:px-10">
+    <div mt-3>
+      <pie-text-input
+        [value]="bloc.password"
+        label="Email Address"
+        id="email"
+        aria-required="true"
+        name="email"
+      >
+      </pie-text-input>
+    </div>
+    <div class="mt-5">
+      <pie-password-input
+        [value]="bloc.password"
+        label="Password"
+        id="password"
+        name="password"
+      ></pie-password-input>
+    </div>
+    <div class="mt-10">
+      <pie-button label="Sign In"></pie-button>
+    </div>
+  </div>
+</div>
