More register component. Switched from callback to event Emitter.

--- a/libs/base-components/src/lib/components/controls/button/button/button.component.html
+++ b/libs/base-components/src/lib/components/controls/button/button/button.component.html
@@ -2,7 +2,7 @@
   [classList]="styleProvider.buttonStyles"
   [id]="id"
   [type]="type"
-  (click)="onClick && onClick($event)"
+  (click)="onClick && _onClick($event)"
 >
   {{ label }}
 </button>
