--- a/apps/timeseries/src/app/pages/login/login.page.html
+++ b/apps/timeseries/src/app/pages/login/login.page.html
@@ -1,3 +1,6 @@
 <div class="mt-16 px-5">
   <pie-login-form></pie-login-form>
 </div>
+<div class="mt-16 px-5">
+  <pie-register-form></pie-register-form>
+</div>
