--- a/libs/base-components/src/lib/components/typography/error-label/error-label.component.html
+++ b/libs/base-components/src/lib/components/typography/error-label/error-label.component.html
@@ -1,5 +1,5 @@
 <span
   [ngClass]="styleProvider.errorLabelStyles"
   *ngIf="!!(error | async) && (error | async) !== true"
-  >{{ error | async }}</span
+  >{{ _error | async }}</span
 >
