--- a/libs/base-components/src/lib/components/typography/label/label.component.html
+++ b/libs/base-components/src/lib/components/typography/label/label.component.html
@@ -1,1 +1,3 @@
-<label [classList]="styleProvider.labelStyles" [for]="for">{{ label }}</label>
+<label [classList]="styleProvider.labelStyles" [for]="for">{{
+  label | translate
+}}</label>
